@@ -1,19 +1,22 @@
 package com.example.b03.service;
 
-import com.example.b03.domain.Member;
-import com.example.b03.domain.MembershipType;
+import com.example.b03.domain.*;
 import com.example.b03.dto.MemberDTO;
 import com.example.b03.dto.PageRequestDTO;
 import com.example.b03.dto.PageResponseDTO;
-import com.example.b03.repository.MemberRepository;
-import com.example.b03.repository.MembershipTypeRepository;
+import com.example.b03.repository.*;
+import com.example.b03.security.service.CustomUserDetails;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.io.File;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -26,16 +29,18 @@ public class MemberServiceImpl implements MemberService {
     private final MemberRepository memberRepository;
     private final MembershipTypeRepository membershipTypeRepository;
     private final ModelMapper modelMapper;
+    private final PasswordEncoder passwordEncoder;
 
     @Override
     public MemberDTO register(MemberDTO memberDTO) {
-        MembershipType membershipType = membershipTypeRepository.findById(memberDTO.getMembershipTypeId())
-                .orElseThrow(() -> new IllegalArgumentException("Invalid Membership Type"));
+        String encodedPassword = passwordEncoder.encode(memberDTO.getPassword());
 
-        // 수동 매핑 (null 방지)
+        MembershipType membershipType = membershipTypeRepository.findById(memberDTO.getMembershipTypeId())
+                .orElseThrow(() -> new RuntimeException("Invalid membershipTypeId"));
+
         Member member = Member.builder()
                 .loginId(memberDTO.getLoginId())
-                .password(memberDTO.getPassword())
+                .password(encodedPassword)
                 .name(memberDTO.getName())
                 .birthDate(memberDTO.getBirthDate())
                 .address(memberDTO.getAddress())
@@ -43,40 +48,13 @@ public class MemberServiceImpl implements MemberService {
                 .membershipType(membershipType)
                 .build();
 
-        Member saved = memberRepository.save(member);
-        return modelMapper.map(saved, MemberDTO.class);
+        return modelMapper.map(memberRepository.save(member), MemberDTO.class);
     }
 
     @Override
     public Optional<MemberDTO> findByLoginId(String loginId) {
         return memberRepository.findByLoginId(loginId)
                 .map(member -> modelMapper.map(member, MemberDTO.class));
-    }
-
-    @Override
-    public MemberDTO update(MemberDTO dto) {
-        Member member = memberRepository.findById(dto.getMemberNo())
-                .orElseThrow(() -> new IllegalArgumentException("Member not found"));
-
-        if (dto.getAddress() == null) {
-            throw new IllegalArgumentException("Address cannot be null");
-        }
-
-        member.setLoginId(dto.getLoginId());
-        member.setPassword(dto.getPassword());
-        member.setName(dto.getName());
-        member.setBirthDate(dto.getBirthDate());
-        member.setAddress(dto.getAddress());
-        member.setPhone(dto.getPhone());
-
-        if (dto.getMembershipTypeId() != null) {
-            MembershipType membershipType = membershipTypeRepository.findById(dto.getMembershipTypeId())
-                    .orElseThrow(() -> new IllegalArgumentException("Invalid Membership Type"));
-            member.setMembershipType(membershipType);
-        }
-
-        Member updated = memberRepository.save(member);
-        return modelMapper.map(updated, MemberDTO.class);
     }
 
     @Override
@@ -90,7 +68,26 @@ public class MemberServiceImpl implements MemberService {
         memberRepository.deleteById(memberNo);
     }
 
-    // ✅ 추가 기능 구현
+    @Override
+    public MemberDTO update(MemberDTO dto) {
+        Member member = memberRepository.findById(dto.getMemberNo())
+                .orElseThrow(() -> new IllegalArgumentException("Member not found"));
+
+        member.setLoginId(dto.getLoginId());
+        member.setName(dto.getName());
+        member.setBirthDate(dto.getBirthDate());
+        member.setAddress(dto.getAddress());
+        member.setPhone(dto.getPhone());
+
+        if (dto.getMembershipTypeId() != null) {
+            MembershipType membershipType = membershipTypeRepository.findById(dto.getMembershipTypeId())
+                    .orElseThrow(() -> new IllegalArgumentException("Invalid Membership Type"));
+            member.setMembershipType(membershipType);
+        }
+
+        return modelMapper.map(memberRepository.save(member), MemberDTO.class);
+    }
+
     @Override
     public List<MemberDTO> getAllMembers() {
         return memberRepository.findAll().stream()
@@ -106,8 +103,7 @@ public class MemberServiceImpl implements MemberService {
         Member member = modelMapper.map(memberDTO, Member.class);
         member.setMembershipType(membershipType);
 
-        Member saved = memberRepository.save(member);
-        return modelMapper.map(saved, MemberDTO.class);
+        return modelMapper.map(memberRepository.save(member), MemberDTO.class);
     }
 
     @Override
@@ -123,12 +119,11 @@ public class MemberServiceImpl implements MemberService {
             existing.setMembershipType(membershipType);
         }
 
-        Member updated = memberRepository.save(existing);
-        return modelMapper.map(updated, MemberDTO.class);
+        return modelMapper.map(memberRepository.save(existing), MemberDTO.class);
     }
 
     @Override
-    public boolean checkDuplicateLoginId(String loginId) {
+    public boolean isLoginIdDuplicate(String loginId) {
         return memberRepository.existsByLoginId(loginId);
     }
 
@@ -136,7 +131,8 @@ public class MemberServiceImpl implements MemberService {
     public void changePassword(Integer memberNo, String newPassword) {
         Member member = memberRepository.findById(memberNo)
                 .orElseThrow(() -> new IllegalArgumentException("Member not found"));
-        member.setPassword(newPassword);
+
+        member.setPassword(passwordEncoder.encode(newPassword));
         memberRepository.save(member);
     }
 
@@ -144,8 +140,19 @@ public class MemberServiceImpl implements MemberService {
     public void deactivateMember(Integer memberNo) {
         Member member = memberRepository.findById(memberNo)
                 .orElseThrow(() -> new IllegalArgumentException("Member not found"));
+
         member.setIsDeleted(true);
         memberRepository.save(member);
+    }
+
+    @Override
+    public boolean isValidPassword(String password) {
+        if (password == null || password.length() < 8) return false;
+
+        String pattern = "^(?=.*[A-Za-z])(?=.*\\d)(?=.*[!@#$%^&*()_+=-]).{8,}$";
+        if (!password.matches(pattern)) return false;
+
+        return !password.matches(".*(.)\\1\\1.*");
     }
 
     @Override
@@ -154,7 +161,7 @@ public class MemberServiceImpl implements MemberService {
         Page<Member> result = memberRepository.findAll(pageable);
         List<MemberDTO> dtoList = result.getContent().stream()
                 .map(member -> modelMapper.map(member, MemberDTO.class))
-                .toList();
+                .collect(Collectors.toList());
 
         return PageResponseDTO.<MemberDTO>builder()
                 .page(requestDTO.getPage())
@@ -165,8 +172,33 @@ public class MemberServiceImpl implements MemberService {
     }
 
     @Override
+    @Transactional(readOnly = true)
+    public MemberDTO getLoginMember() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null || !authentication.isAuthenticated() ||
+                authentication.getPrincipal().equals("anonymousUser")) {
+            return null;
+        }
+
+        Object principal = authentication.getPrincipal();
+        if (principal instanceof CustomUserDetails) {
+            Integer memberNo = ((CustomUserDetails) principal).getMember().getMemberNo();
+
+            Member member = memberRepository.findByIdWithMembershipType(memberNo)
+                    .orElseThrow(() -> new IllegalArgumentException("Member not found"));
+
+            return MemberDTO.fromEntity(member);
+        }
+
+        String loginId = authentication.getName();
+        Member member = memberRepository.findByLoginIdWithMembershipType(loginId).orElse(null);
+        return member != null ? MemberDTO.fromEntity(member) : null;
+    }
+
+    @Override
+    @Transactional(readOnly = true)
     public MemberDTO getMemberByLoginId(String loginId) {
-        return memberRepository.findByLoginId(loginId)
+        return memberRepository.findByLoginIdWithMembershipType(loginId)
                 .map(member -> {
                     MemberDTO dto = modelMapper.map(member, MemberDTO.class);
                     if (member.getMembershipType() != null) {
@@ -176,20 +208,6 @@ public class MemberServiceImpl implements MemberService {
                     return dto;
                 })
                 .orElseThrow(() -> new IllegalArgumentException("Member not found"));
-    }
-
-    @Override
-    public boolean isValidPassword(String password) {
-        if (password == null || password.length() < 8) return false;
-
-        // 영문자 + 숫자 + 특수문자 포함
-        String pattern = "^(?=.*[A-Za-z])(?=.*\\d)(?=.*[!@#$%^&*()_+=-]).{8,}$";
-        if (!password.matches(pattern)) return false;
-
-        // 같은 문자 3번 이상 반복 금지 (aaa, !!! 등)
-        if (password.matches(".*(.)\\1\\1.*")) return false;
-
-        return true;
     }
 
 }
